--- a/css/styless.css
+++ b/css/styless.css
@@ -8,7 +8,11 @@
 }
 html{
     font-size: 62.5%;
+    box-sizing: border-box;
 }
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
 body{
     font-size: 16px;
     font-family: 'Krub', sans-serif;
@@ -23,18 +27,27 @@ body{
     font-size: 2rem;
 }
 .contenedor{
-    width: 120rem;
+    max-width: 120rem;
     margin: 0 auto;
 }
 .nav-bg{
     background-color: var(--secundario);
 }
 .navegacion-principal{
-  
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  
+}
+@media (min-width: 768px) { 
+    .navegacion-principal{
+        flex-direction: row;
+        justify-content: space-between;
+      }
+     
 }
 .navegacion-principal a{
+    display: block;
+    text-align: center;
     color: var(--blanco);
     text-decoration: none;
     font-size: 2rem;
@@ -44,4 +57,12 @@ body{
 .navegacion-principal a:hover{
     background: var(--primario);
     color: var(--oscuro);
+}
+
+.hero{
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 410px;
+    padding: 20px;
 }
